# a2a-registry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_DISCUSSION_DRAFT.md  GITHUB_ISSUE_COMMENT.md  GITHUB_SETUP.md  IMPLEMENTATION_STATUS.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  POST_TO_GITHUB.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUCCESS.md  docker-compose.yml  init-git.sh
docs/: api-reference.md
examples/: demo.sh  sample-agent.json
registry-client/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
registry-client/examples/: basic-usage.ts
registry-client/src/: index.test.ts  index.ts  types.ts
registry-python-client/: README.md  pyproject.toml
registry-python-client/src/a2a_registry/: __init__.py  client.py  exceptions.py  models.py
registry-python-client/src/a2a_registry_client.egg-info/: PKG-INFO  SOURCES.txt
registry-python-client/tests/: test_client.py
registry-server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  schema.sql
registry-server/src/: index.ts
registry-server/src/config/: database.ts  redis.ts
registry-server/src/controllers/: agentController.ts  semanticController.ts
registry-server/src/middleware/: errorHandler.ts  notFoundHandler.ts  validation.ts
registry-server/src/routes/: agents.ts  health.ts
registry-server/src/utils/: logger.ts  uuid.ts
semantic-search/: .env.example  Dockerfile  README.md  config.py  database.py  embeddings.py  main.py  models.py  requirements.txt  schema_vector.sql
